[gd_scene load_steps=10 format=4 uid="uid://cpx2flo8ciq52"]

[ext_resource type="PackedScene" uid="uid://b2dgqpmyn8vk7" path="res://scenes/player_1.tscn" id="1_b83jc"]
[ext_resource type="PackedScene" uid="uid://b5qj2cybnnboq" path="res://scenes/player_2.tscn" id="2_7dnqe"]
[ext_resource type="Script" uid="uid://dmgx0hpdylqy0" path="res://scripts/player_1.gd" id="3_3mmis"]
[ext_resource type="PackedScene" uid="uid://ct6nal43x52ni" path="res://scenes/portal.tscn" id="4_anpjl"]
[ext_resource type="Script" uid="uid://cmba85fn3wyik" path="res://scripts/player_2.gd" id="5_g10v6"]
[ext_resource type="Texture2D" uid="uid://bxkdc6oy1pam0" path="res://Assets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="6_haxic"]
[ext_resource type="Script" uid="uid://dvmvwx3lelks8" path="res://scripts/area_2d.gd" id="7_p7w44"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t8rg2"]
texture = ExtResource("6_haxic")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_xdufs"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_t8rg2")

[node name="cena_01" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGACUAAAAEAAEAAAAGACYAAAAEAAIAAAAGACcAAAAEAAYAAAAHACUAAAAEAAEAAAAHACYAAAAEAAIAAAAHACcAAAAEAAYAAAAIACUAAAAEAAEAAAAIACYAAAAEAAIAAAAIACcAAAAEAAYAAAAJACUAAAAEAAEAAAAJACYAAAAEAAIAAAAJACcAAAAEAAYAAAAKACUAAAAEAAEAAAAKACYAAAAEAAIAAAAKACcAAAAEAAYAAAALACUAAAAEAAEAAAALACYAAAAEAAIAAAALACcAAAAEAAYAAAAMACUAAAAEAAEAAAAMACYAAAAEAAIAAAAMACcAAAAEAAYAAAANACUAAAAEAAEAAAANACYAAAAEAAIAAAANACcAAAAEAAYAAAAOACUAAAAEAAEAAAAOACYAAAAEAAIAAAAOACcAAAAEAAYAAAAPACUAAAAEAAEAAAAPACYAAAAEAAIAAAAPACcAAAAEAAYAAAAQACUAAAAEAAEAAAAQACYAAAAEAAIAAAAQACcAAAAEAAYAAAARACUAAAAEAAEAAAARACYAAAAEAAIAAAARACcAAAAEAAYAAAASACUAAAAEAAEAAAASACYAAAAEAAIAAAASACcAAAAEAAYAAAATACUAAAAEAAEAAAATACYAAAAEAAIAAAATACcAAAAEAAYAAAAUACUAAAAEAAEAAAAUACYAAAAEAAIAAAAUACcAAAAEAAYAAAAVACUAAAAEAAEAAAAVACYAAAAEAAIAAAAVACcAAAAEAAYAAAAWACUAAAAEAAEAAAAWACYAAAAEAAIAAAAWACcAAAAEAAYAAAAXACUAAAAEAAEAAAAXACYAAAAEAAIAAAAXACcAAAAEAAYAAAAYACUAAAAEAAEAAAAYACYAAAAEAAIAAAAYACcAAAAEAAYAAAAZACUAAAAFAAEAAAAZACYAAAAFAAIAAAAZACcAAAAFAAYAAAAFACUAAAADAAEAAAAFACYAAAADAAIAAAAFACcAAAADAAYAAAALAB8AAAADAAEAAAAMAB8AAAAEAAEAAAANAB8AAAAEAAEAAAAOAB8AAAAEAAEAAAAPAB8AAAAEAAEAAAAQAB8AAAAEAAEAAAARAB8AAAAEAAEAAAASAB8AAAAEAAEAAAATAB8AAAAFAAEAAAAPACAAAAAEAAYAAAAMACAAAAAEAAYAAAANACAAAAAEAAYAAAAOACAAAAAEAAYAAAAQACAAAAAEAAYAAAARACAAAAAEAAYAAAASACAAAAAEAAYAAAATACAAAAAFAAYAAAALACAAAAADAAYAAAADABsAAAADAAEAAAAEABsAAAAEAAEAAAAFABsAAAAEAAEAAAAGABsAAAAFAAEAAAAGABwAAAAFAAYAAAADABwAAAADAAYAAAAEABwAAAAEAAYAAAAFABwAAAAEAAYAAAAaABwAAAAEAAYAAAAZABwAAAAEAAYAAAAZABsAAAAEAAEAAAAaABsAAAAEAAEAAAAYABsAAAABAAMAAAAYABwAAAABAAQAAAAbABsAAAAHAAMAAAAbABwAAAAHAAQAAAAIABYAAAABAAMAAAAJABYAAAACAAMAAAABABEAAAABAAMAAAACABEAAAACAAMAAAAHAAwAAAABAAMAAAAIAAwAAAACAAMAAAAPABAAAAABAAMAAAAQABAAAAACAAMAAAAXAA0AAAABAAMAAAAYAA0AAAACAAMAAAAUABUAAAABAAMAAAAVABUAAAACAAMAAAAPABoAAAABAAMAAAAQABoAAAAEAAEAAAAcABEAAAABAAMAAAAdABEAAAACAAMAAAAQAAkAAAABAAMAAAARAAkAAAACAAMAAAAJAAwAAAAFAAEAAAADABEAAAAFAAEAAAARABAAAAAFAAEAAAAKABYAAAAFAAEAAAARABoAAAAFAAEAAAAWABUAAAAFAAEAAAAeABEAAAAFAAEAAAAZAA0AAAAFAAEAAAASAAkAAAAFAAEAAAAPABsAAAADAAYAAAAQABsAAAAEAAYAAAARABsAAAAFAAYAAAAIABcAAAADAAYAAAAJABcAAAAEAAYAAAAKABcAAAAFAAYAAAABABIAAAADAAYAAAACABIAAAAEAAYAAAADABIAAAAFAAYAAAAHAA0AAAADAAYAAAAIAA0AAAAEAAYAAAAJAA0AAAAFAAYAAAAQAAoAAAADAAYAAAARAAoAAAAEAAYAAAASAAoAAAAFAAYAAAAXAA4AAAADAAYAAAAYAA4AAAAEAAYAAAAZAA4AAAAFAAYAAAAcABIAAAADAAYAAAAdABIAAAAEAAYAAAAeABIAAAAFAAYAAAAUABYAAAADAAYAAAAVABYAAAAEAAYAAAAWABYAAAAFAAYAAAAPABEAAAADAAYAAAAQABEAAAAEAAYAAAARABEAAAAFAAYAAAACAAcAAAADAAYAAAAFAAcAAAAEAAYAAAAGAAcAAAAFAAYAAAAEAAcAAAAEAAYAAAADAAcAAAAEAAYAAAACAAYAAAADAAEAAAADAAYAAAAEAAEAAAAEAAYAAAAEAAEAAAAFAAYAAAAEAAEAAAAGAAYAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_xdufs")

[node name="player1" parent="." instance=ExtResource("1_b83jc")]
position = Vector2(115, 565)
script = ExtResource("3_3mmis")

[node name="player2" parent="." instance=ExtResource("2_7dnqe")]
position = Vector2(358, 587)
script = ExtResource("5_g10v6")

[node name="portal" parent="." instance=ExtResource("4_anpjl")]
position = Vector2(75, 79)
script = ExtResource("7_p7w44")
